--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap");
 * {
   box-sizing: border-box;
   padding: 0;
@@ -10,7 +9,8 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  font-family: "Inter";
+  font-family: "Montserrat", sans-serif;
+
   font-style: normal;
 }
 .Loding-bg {
@@ -115,4 +115,5 @@ a {
   top: 17em;
   background: #2c1853;
   border-radius: 2.4em;
+  font-family: "Montserrat", sans-serif;
 }
