--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,13 +37,12 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url(/bgpro3.svg) #393842;
+  background: url(/bgproStarted.svg) #393842;
   background-size: cover;
   background-position: center;
   opacity: 0.9;
 }
 .auth-form {
-  /* background: url(../public/Form.svg); */
   background-size: cover;
   background-position: center;
   border-radius: 12px;
@@ -59,11 +58,10 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url(/bgPro.svg) #393842;
+  background: url(/bgPro.svg);
   background-size: cover;
   background-position: center;
   transform: rotate(180deg);
-  opacity: 0.9;
 }
 body {
   font-family: "Inter", sans-serif;
