--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,7 +36,8 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url(/bgproStarted.svg) #393842;
+  background: url(/bgproStarted.svg);
+  background: #393842;
   background-size: cover;
   background-position: center;
   opacity: 0.9;
@@ -107,11 +108,19 @@ a {
 /* Modal */
 .modal {
   position: fixed;
-  width: 40vw;
-  height: 65vh;
-  left: 45em;
+  width: 500px;
+  height: 60vh;
+  left: 55em;
   top: 17em;
   background: #2c1853;
   border-radius: 2.4em;
   font-family: "Montserrat", sans-serif;
+  border: 1px solid white;
+}
+@media  (max-width: 768px) {
+  .modal {
+    width: 300px;
+    left: 3em;
+    height: 50vh;
+  }
 }
