--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,17 +1,18 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap');
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-style: normal;
+  background: #393842;
 }
 .Loding-bg {
   background: url(/BGxyz.svg);
@@ -29,15 +30,14 @@ body {
   position: relative;
 }
 .started-bg::before {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: url(/bgproStarted.svg);
-  background: #393842;
+  background: url(/bgproStarted.svg) #393842;
   background-size: cover;
   background-position: center;
   opacity: 0.9;
@@ -51,7 +51,7 @@ body {
   position: relative;
 }
 .last-section::before {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   top: 0;
@@ -64,7 +64,7 @@ body {
   transform: rotate(180deg);
 }
 body {
-  font-family: "Inter", sans-serif;
+  font-family: 'Inter', sans-serif;
   width: 100%;
 }
 
@@ -108,19 +108,37 @@ a {
 /* Modal */
 .modal {
   position: fixed;
+  top: 20%;
+  left: 10%;
+  right: 0;
+  bottom: 0;
+  margin: auto;
   width: 500px;
   height: 60vh;
-  left: 55em;
-  top: 17em;
   background: #2c1853;
   border-radius: 2.4em;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   border: 1px solid white;
 }
-@media  (max-width: 768px) {
+@media (max-width: 400px) {
   .modal {
-    width: 300px;
-    left: 3em;
+    width: 200px;
+    top: 0;
     height: 50vh;
   }
+}
+@media (min-width: 401px) and (max-width: 660px) {
+  .modal {
+    width: 300px;
+    top: 0;
+    height: 50vh;
+  }
+}
+
+.blur {
+  filter: blur(3px);
+}
+/* Social Icons */
+.social-icon {
+  cursor: pointer;
 }
